# HUBWorld_Engine

./: .gitignore  README.md
cge_source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp  toolchain-windows.cmake  window.cpp  window.h
cge_source/.cache/clangd/index/: TextRenderer.cpp.59C888D467493A55.idx  TextRenderer.h.CCE9F59992A5D9AE.idx  _fixes.hpp.9DDB7F1AFF322655.idx  _vectorize.hpp.D5379D88049DEC04.idx  common.hpp.CA900053D031F420.idx  compute_common.hpp.32D571253D5C4A87.idx  compute_vector_relational.hpp.6C9480FB09480120.idx  constants.hpp.90A6B1F0476E6F5E.idx  constants.inl.65B2F9F942A9378F.idx  engine_window.cpp.A878179DED6EEF25.idx  engine_window.h.7FD54D24353BD718.idx  epsilon.hpp.ADDCF7F8C1A58ADC.idx  epsilon.inl.6E131A6EA7D5A429.idx  exponential.hpp.CF957FD375B7891A.idx  func_common.inl.225900902F3652B3.idx  func_exponential.inl.3F7D1B93E7383695.idx  func_geometric.inl.1D3D8D39920A5F6C.idx  func_integer.inl.9A392769363AC8E0.idx  func_matrix.inl.437C111A19AE2EEC.idx  func_packing.inl.AE478CA5E9E418E6.idx  func_trigonometric.inl.C19E134B5E4DD470.idx  func_vector_relational.inl.877ECCEEA734E02B.idx  fwd.hpp.CD29875064DFB72D.idx  geometric.hpp.2322A24601B34CB9.idx  glad.c.030A22C5F86F55E5.idx  glad.h.99FEEA2D9E2E9985.idx  glfw3.h.F764C5A3216D4496.idx  glm.hpp.121BC346985870FC.idx  integer.hpp.66D360DFE30A9095.idx  khrplatform.h.163FEEB3C078D24D.idx  main.cpp.93C8511F55DC9677.idx  mat2x2.hpp.1C9E6C9005D932C0.idx  mat2x3.hpp.9541DFB5362D49E4.idx  mat2x4.hpp.89857806563D829A.idx  mat3x2.hpp.A6B3E80FA82999B1.idx  mat3x3.hpp.C071A31F81133266.idx  mat3x4.hpp.EBFE02DC8EBF4187.idx  mat4x2.hpp.B38BB4F491940045.idx  mat4x3.hpp.7F1961B1C1DA2DD0.idx  mat4x4.hpp.4A5B0FE832CD3028.idx  (+154 more)
cge_source/debug/: cge_macos_build  main_exec
cge_source/debug/shaders/: fsText.fs  vsText.vs
cge_source/libs/universal/custom_libraries/enginewindow/: engine_window.cpp  engine_window.h
cge_source/libs/universal/custom_libraries/shader/: shader.cpp  shader.h
cge_source/libs/universal/custom_libraries/textrenderer/: TextRenderer.cpp  TextRenderer.h
cge_source/libs/universal/custom_libraries/textrenderer/shaders/: vsText.vs
cge_source/libs/universal/custom_libraries/window/: window.cpp  window.h
cge_source/libs/universal/glad/include/glad/: glad.h
cge_source/libs/universal/glad/src/: glad.c
